--- a/cpp.project05.sfml.vcxproj
+++ b/cpp.project05.sfml.vcxproj
@@ -109,6 +109,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <AdditionalIncludeDirectories>C:\Users\tdelorme\source\repos\cpp.project05.sfml</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -134,29 +135,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Button.cpp" />
-    <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Menu.cpp" />
-    <ClCompile Include="NPC.cpp" />
-    <ClCompile Include="Player.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MainWindow.cpp" />
-    <ClCompile Include="Pokeball.cpp" />
-    <ClCompile Include="Pokemon.cpp" />
-    <ClCompile Include="Spray.cpp" />
-    <ClCompile Include="TexturedElement.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Button.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="NPC.h" />
-    <ClInclude Include="Player.h" />
-    <ClInclude Include="MainWindow.h" />
-    <ClInclude Include="Pokeball.h" />
-    <ClInclude Include="Pokemon.h" />
-    <ClInclude Include="Spray.h" />
-    <ClInclude Include="Structures.h" />
-    <ClInclude Include="TexturedElement.h" />
+    <ClCompile Include="src\entities\NPC.cpp" />
+    <ClCompile Include="src\entities\Player.cpp" />
+    <ClCompile Include="src\entities\Pokeball.cpp" />
+    <ClCompile Include="src\entities\Pokemon.cpp" />
+    <ClCompile Include="src\entities\Spray.cpp" />
+    <ClCompile Include="src\entities\TexturedElement.cpp" />
+    <ClCompile Include="src\Game.cpp" />
+    <ClCompile Include="src\view\Button.cpp" />
+    <ClCompile Include="src\view\MainWindow.cpp" />
+    <ClCompile Include="src\view\Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\Menu.jpg" />
@@ -164,6 +153,23 @@
   </ItemGroup>
   <ItemGroup>
     <Font Include="assets\pixelFont.ttf" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\entities\NPC.h" />
+    <ClInclude Include="include\entities\Player.h" />
+    <ClInclude Include="include\entities\Pokeball.h" />
+    <ClInclude Include="include\entities\Pokemon.h" />
+    <ClInclude Include="include\entities\Spray.h" />
+    <ClInclude Include="include\entities\TexturedElement.h" />
+    <ClInclude Include="include\Game.h" />
+    <ClInclude Include="include\Structures.h" />
+    <ClInclude Include="include\view\Button.h" />
+    <ClInclude Include="include\view\MainWindow.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitattributes" />
+    <None Include=".gitignore" />
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
