--- a/cpp.project05.sfml.vcxproj
+++ b/cpp.project05.sfml.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\include;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\include;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\include;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\include;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\include;C:\Users\thoma\workspaces\GTECH2\cpp.project05.sfml;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\thoma\Documents\C++ Librairies\SFML-VisualStudio\lib;C:\Users\tdelorme\Documents\Visual Studio 2022\Development Librairies\SFML\lib;D:\Documents\Dev\Visual Libraries\SFML-2.5.1\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -109,7 +109,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <AdditionalIncludeDirectories>C:\Users\tdelorme\source\repos\cpp.project05.sfml</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\tdelorme\source\repos\cpp.project05.sfml;C:\Users\thoma\workspaces\GTECH2\cpp.project05.sfml</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -138,6 +138,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="db_perlin.cpp" />
+    <ClCompile Include="InventoryMenu.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\entities\NPC.cpp" />
     <ClCompile Include="src\entities\Player.cpp" />
@@ -152,8 +153,13 @@
     <ClCompile Include="src\view\Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="assets\inventoryBackground.png" />
     <Image Include="assets\Menu.jpg" />
     <Image Include="assets\pikachu.png" />
+    <Image Include="assets\pixil-frame-0.png" />
+    <Image Include="assets\pixil-frame-1.png" />
+    <Image Include="assets\pokemon.png" />
+    <Image Include="assets\sacha.png" />
   </ItemGroup>
   <ItemGroup>
     <Font Include="assets\pixelFont.ttf" />
