--- a/cpp.project05.sfml.vcxproj
+++ b/cpp.project05.sfml.vcxproj
@@ -138,7 +138,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="db_perlin.cpp" />
-    <ClCompile Include="InventoryMenu.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\entities\NPC.cpp" />
     <ClCompile Include="src\entities\Player.cpp" />
@@ -149,11 +148,13 @@
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\map\MapGenerator.cpp" />
     <ClCompile Include="src\view\Button.cpp" />
+    <ClCompile Include="src\view\InventoryMenu.cpp" />
     <ClCompile Include="src\view\MainWindow.cpp" />
     <ClCompile Include="src\view\Menu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\inventoryBackground.png" />
+    <Image Include="assets\items.png" />
     <Image Include="assets\Menu.jpg" />
     <Image Include="assets\pikachu.png" />
     <Image Include="assets\pixil-frame-0.png" />
